crates/formats/src/snapshots/knot_formats__zoning__tests__single_block_macro.snap
---
source: crates/formats/src/zoning.rs
expression: zones.debug_dump(&body)
---
=== Leaves ===
  [   0..   9) MacroTag(Open name=if kind=Container)         body=None | "<<if $x>>"
  [   9..  13) Prose                                         body=0 | "text"
  [  13..  20) MacroTag(Close name=if kind=Container)        body=None | "<</if>>"

=== Bodies ===
  [0] [   9..  13) name=if           depth=0 parent=None close=[13..20)
