crates/formats/src/snapshots/knot_formats__zoning__tests__unknown_macro.snap
---
source: crates/formats/src/zoning.rs
expression: zones.debug_dump(&body)
---
=== Leaves ===
  [   0..  15) MacroTag(Open name=nonExistent kind=Unknown)  body=None | "<<nonExistent>>"
  [  15..  19) Prose                                         body=0 | "text"

=== Bodies ===
  [0] [  15..  15) name=nonExistent  depth=0 parent=None close=None [unclosed]
